# flask-project

./: .gitignore  .pre-commit-config.yaml  answers.txt  openapi.yaml  pyproject.toml  readme.md  requirements.txt
app/: app.py
app/test/: createTable.py  insertData.py  log_data.py
